; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_csum.c_ext2fs_ext_attr_block_csum_set.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_csum.c_ext2fs_ext_attr_block_csum_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.ext2_ext_attr_header = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ext2fs_ext_attr_block_csum_set(%struct.TYPE_4__* %0, i32 %1, i32 %2, %struct.ext2_ext_attr_header* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.ext2_ext_attr_header*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store %struct.ext2_ext_attr_header* %3, %struct.ext2_ext_attr_header** %9, align 8
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @ext2fs_has_feature_metadata_csum(i32 %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %4
  store i64 0, i64* %5, align 8
  br label %33

18:                                               ; preds = %4
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* %8, align 4
  %22 = load %struct.ext2_ext_attr_header*, %struct.ext2_ext_attr_header** %9, align 8
  %23 = call i64 @ext2fs_ext_attr_block_csum(%struct.TYPE_4__* %19, i32 %20, i32 %21, %struct.ext2_ext_attr_header* %22, i32* %11)
  store i64 %23, i64* %10, align 8
  %24 = load i64, i64* %10, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %18
  %27 = load i64, i64* %10, align 8
  store i64 %27, i64* %5, align 8
  br label %33

28:                                               ; preds = %18
  %29 = load i32, i32* %11, align 4
  %30 = call i32 @ext2fs_cpu_to_le32(i32 %29)
  %31 = load %struct.ext2_ext_attr_header*, %struct.ext2_ext_attr_header** %9, align 8
  %32 = getelementptr inbounds %struct.ext2_ext_attr_header, %struct.ext2_ext_attr_header* %31, i32 0, i32 0
  store i32 %30, i32* %32, align 4
  store i64 0, i64* %5, align 8
  br label %33

33:                                               ; preds = %28, %26, %17
  %34 = load i64, i64* %5, align 8
  ret i64 %34
}

declare dso_local i32 @ext2fs_has_feature_metadata_csum(i32) #1

declare dso_local i64 @ext2fs_ext_attr_block_csum(%struct.TYPE_4__*, i32, i32, %struct.ext2_ext_attr_header*, i32*) #1

declare dso_local i32 @ext2fs_cpu_to_le32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
